--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-list-react-app",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/Prc6-React-js",
+  "homepage": "https://vijay-thumar.github.io/Prc6-React-js",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -25,7 +26,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
