--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "user-list-react-app",
   "version": "0.1.0",
-  "homepage": "https://vijay-thumar.github.io/Prc6-React-js",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
@@ -9,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -20,6 +20,8 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
+    "build:production": "env-cmd -f .env.staging npm run build",
+    "build:staging": "env-cmd -f .env.staging npm run build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
